--- a/FameOfLife/FameOfLife.fsproj
+++ b/FameOfLife/FameOfLife.fsproj
@@ -1,13 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <BaseOutputPath>..\Build\bin\</BaseOutputPath>
     <BaseIntermediateOutputPath>..\Build\obj\</BaseIntermediateOutputPath>
+    <UseWindowsForms>True</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="src\MainForm.fs" />
     <Compile Include="src\Main.fs" />
   </ItemGroup>
 
