--- a/FameOfLife/FameOfLife.fsproj
+++ b/FameOfLife/FameOfLife.fsproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="src\World.fs" />
+    <Compile Include="src\WorldControl.fs" />
     <Compile Include="src\MainForm.fs" />
     <Compile Include="src\Main.fs" />
   </ItemGroup>
